# mpi-tensorflow

./: MANIFEST.in  README.md  distributed_optimizer.py  distributed_optimizer_allreduce.py  distributed_optimizer_compressor.py  distributed_optimizer_ps.py  distributed_optimizer_qsgd.py  example_distributed_allreduce_optimizer.py  example_distributed_hsq_optimizer.py  example_distributed_nnq_optimizer.py  example_distributed_optimizer.py  example_distributed_qsgd_optimizer.py  example_model.py  myutils.py  setup.py
mpi_ops/: compile.sh  mylibsmodule.cc  setup.py
mpi_ops/mpi_ops/: mpi_ops.h  mpi_ops_bcast.cc  mpi_ops_gather.cc
tf_mpi/mpi_ops/: __init__.py
tf_mpi/mpi_ops/mpi_ops/: CMakeLists.txt  mpi_ops.cc  mpi_ops_allgather.cc  mpi_ops_allreduce.cc
tf_mpi/optimizers/: __init__.py  distributed_optimizer.py  distributed_optimizer_allreduce.py  distributed_optimizer_compressor.py  distributed_optimizer_hsq.py  distributed_optimizer_lsh.py  distributed_optimizer_nn.py  distributed_optimizer_ps.py  distributed_optimizer_qsgd.py  myutils.py
